<resources>
    <string name="app_name">AU Source</string>
    <string name="title_activity_login">LoginActivity</string>


    <!-- Menus-->
    <string name="dashboard">Dashboard</string>
    <string name="inbox">Inbox</string>
    <string name="my_team">My Team</string>
    <string name="to_dos">To-Dos</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="product_update">Product Update</string>
    <string name="price_analysis">Price Analysis</string>
    <string name="price_survey">Price Survey</string>

    <string name="internet_connectivity_message">no internet</string>
    <string name="product_list">Product List</string>
    <string name="new_product">New Product</string>
    <string name="discounted_product">Discounted Product</string>
    <string name="banded_product">Banded Product</string>
    <string name="expiring_product">Expiring Products</string>
    <string name="in_store_sampling">In Store Sampling</string>
    <string name="stock_in_trade">Stock In Trade</string>
    <string name="general">General</string>
    <string name="settings">Settings</string>

    <string name="feedback">Feedback</string>
    <string name="change_store">Change Store</string>
    <string name="sync">Sync</string>
    <string name="vacation">Vacation</string>
    <string name="logout">Logout</string>
    <string name="chat_not_availble">Chat not available.</string>

    <string name="user_is_not_authentic">User is not authentic</string>


    <!-- common error-->
    <string name="error_empty_field"> Please enter all details.</string>
    <string name="internet_error">No internet connection available.</string>
    <string name="server_error">Server not responding.</string>
    <string name="connection_timeout_error">Connection is taking too long to respond. Please retry..</string>

    <!--Splash Activity -->
    <string name="welcome_to_source">Welcome to Source</string>
    <string name="splash_msg">Join the Team of people using Sensory to evaluate products</string>

    <!-- Login -->
    <string name="source">SOURCE</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_">Forgot Password</string>


    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="reset_password">Reset Password</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="login">Log In</string>
    <string name="login_">Login</string>
    <string name="username_error">Please enter username.</string>
    <string name="password_error">Please enter a password.</string>
    <string name="email">Email</string>
    <string name="continue_">Continue</string>


    <!--Forgot Password -->
    <string name="forgot_pass_msg">Enter your email address, we"'"ll send you an OTP on your registered email Address.</string>
    <string name="submit">Submit</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="empty_emailId">Please enter an EmailId</string>
    <string name="valid_emailId_error_msg">Please enter a valid EmailId</string>

    <!-- forgotPassword Otp-->
    <string name="otp_empty_error">Please enter the OTP.</string>
    <string name="password_valid">Password must contain 1 lowercase letter, 1 uppercase letter,1 number and one special character.</string>

    <!-- Reset password -->
    <string name="set_your_password">Set your password</string>
    <string name="reset_password_msg">Set your new password</string>
    <string name="set_your_password_first_time_msg">This is your first time logging in please set your password.</string>
    <string name="otp">Enter your OTP</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="otp_empty">Please enter an OTP.</string>
    <string name="old_password_empty">Please enter old password.</string>
    <string name="password_empty">Please enter a password.</string>
    <string name="confirm_password_error_msg">Password and confirm Password must be same.</string>

    <string name="enter_six_digit">Enter 6-digit verification code</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!-- fragment tag-->
    <string name="label_dashboard">Dashboard</string>
    <string name="label_my_team">My Team</string>
    <string name="label_profile">Profile</string>
    <string name="label_inbox">Inbox</string>
    <string name="label_notification">Notification</string>

    <string name="label_price_analysis">Price Analysis</string>
    <string name="label_price_survey">Price Survey</string>
    <string name="label_product_list">Product List</string>
    <string name="label_new_product">New Product</string>
    <string name="label_banded_product">Banded Product</string>
    <string name="label_expiring_product">Exipring Product</string>
    <string name="label_in_stroe_product">In store product</string>

    <string name="label_setting">Setting</string>
    <string name="label_vacation">Vacation</string>
    <string name="label_change_store">Change store</string>
    <string name="label_sync">Sync</string>
    <string name="lable_about">About</string>
    <string name="lable_my_team">My Team</string>
    <string name="label_faq">Faq</string>


    <!-- Setting-->
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="faq">FAQ</string>
    <string name="about_us">About Us</string>


    <!-- product update-->
    <string name="brand">Brand</string>
    <string name="product_name">Product Name</string>
    <string name="product">Product</string>

    <string name="uom">UOM</string>
    <string name="upc">UPC</string>
    <string name="final_price">Final Price</string>
    <string name="last_update">Last Update</string>
    <string name="added_on">Added On</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="tax">Tax</string>
    <string name="stock">Stock</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="type">Type</string>

    <!-- Profile-->
    <string name="user">User</string>
    <string name="store">Store</string>
    <string name="company">Company</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>

    <string name="no_product_added">You have not added any items for this month</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>


    <!--Vacation -->
    <string name="vacation_msg">You have not taken any vacation</string>


    <!-- stores  Activity-->
    <string name="select_a_stores">Select a store</string>
    <string name="select_your_location">Select your location</string>
    <string name="pick_your_location">Pick your location</string>

    <string name="please_select_a_valid_location">Please select a valid location.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_store">StoreActivity</string>
    <string name="string_camera">Camera</string>
    <string name="string_gallery">Gallery</string>
    <string name="date">Date</string>
    <string name="from_date">Start Date</string>

    <string name="date_pattern">DD/MM/YYYY</string>
    <string name="to_date">End Date</string>
    <string name="today">Today</string>
    <string name="clear">Clear</string>
    <string name="thirty_days">30 Days</string>
    <string name="sixty_days">60 Days</string>
    <string name="ninthy">90 Days</string>
    <string name="unit">Unit</string>
    <string name="sick_leave">Sick Leave</string>
    <string name="relief_sales">Relief Sales</string>


    <string name="start__date_empty">From date is empty.</string>
    <string name="end_date_empty">To date is empty.</string>
    <string name="stock_is_empty">Stock is empty.</string>
    <string name="stock_unit_empty">Stock Unit is empty.</string>
    <string name="product_list_category_msg">Please select the categories that are in the store</string>
    <string name="product_list_brand_msg">Please select the brands that are in the store</string>
    <string name="product_list_product_msg">Please select the products that are in the store</string>

    <string name="title_align_qr">Align Barcode within the frame.</string>
    <string name="title_scan">Scan a QR code to check-in attendee</string>
    <string name="scanner">Scanner</string>

</resources>
