<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relLayRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yogeshgarg.source.mvp.reset_password.ResetPasswordActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/bg_grey" />

    <include layout="@layout/dummu_toolbar"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/margin_50sp"
        android:layout_marginRight="@dimen/margin_50sp">


        <TextView
            android:id="@+id/txtViewForgotPasswordMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reset_password_msg"
            android:textColor="@color/color_black"
            android:textSize="@dimen/txt_14_dp" />


        <EditText
            android:id="@+id/edtTextCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtViewForgotPasswordMsg"
            android:layout_marginTop="@dimen/margin_20sp"
            android:background="@drawable/rect_edittext"
            android:gravity="center_vertical"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/txt_15_dp"
            android:textColor="@color/color_black"
            android:textColorHint="@color/color_dark_grey"
            android:textSize="@dimen/txt_14_dp" />


        <EditText
            android:id="@+id/edtTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtTextCurrentPassword"
            android:background="@drawable/rect_edittext"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/txt_15_dp"
            android:textColor="@color/color_black"
            android:textColorHint="@color/color_dark_grey"
            android:textSize="@dimen/txt_14_dp" />


        <EditText
            android:id="@+id/edtTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtTextPassword"
            android:background="@drawable/rect_edittext"
            android:gravity="center_vertical"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/txt_15_dp"
            android:textColor="@color/color_black"
            android:textColorHint="@color/color_dark_grey"
            android:textSize="@dimen/txt_14_dp" />


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtTextConfirmPassword"
            android:layout_marginTop="@dimen/margin_20sp"
            android:background="@drawable/btn"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="@dimen/txt_14_dp" />

    </RelativeLayout>


</RelativeLayout>
