<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    tools:context="com.example.yogeshgarg.source.mvp.vacation.vacation_calendar.VacationCalendarActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/dummu_toolbar">

    </include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/txtViewTitleFromDate"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/from_date"
            android:textColor="@color/color_black"
            android:textSize="@dimen/txt_14_dp" />

        <TextView
            android:id="@+id/txtViewFromDate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/txtViewTitleFromDate"
            android:background="@drawable/edit_white"
            android:drawableEnd="@mipmap/ic_calendar"
            android:focusable="true"
            android:gravity="center_vertical"
            android:hint="@string/date_pattern"
            android:padding="@dimen/txt_10_dp"
            android:textColor="@color/color_bg"
            android:textSize="@dimen/txt_14_dp" />


        <TextView
            android:id="@+id/txtViewTitleToDate"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/txtViewTitleFromDate"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/to_date"
            android:textColor="@color/color_black"
            android:textSize="@dimen/txt_14_dp" />

        <TextView
            android:id="@+id/txtViewToDate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txtViewTitleFromDate"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/txtViewTitleFromDate"
            android:background="@drawable/edit_white"
            android:drawableEnd="@mipmap/ic_calendar"
            android:gravity="center_vertical"
            android:hint="@string/date_pattern"
            android:padding="@dimen/txt_10_dp"
            android:textColor="@color/color_bg"
            android:textSize="@dimen/txt_14_dp" />

        <TextView
            android:id="@+id/txtViewTitleToday"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_below="@+id/txtViewToDate"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_white"
            android:gravity="center"
            android:text="@string/today"
            android:textColor="@color/color_black"
            android:textSize="@dimen/txt_14_dp" />

        <TextView
            android:id="@+id/txtViewTitleClear"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_below="@+id/txtViewToDate"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/txtViewTitleToday"
            android:background="@drawable/edit_white"
            android:gravity="center"
            android:text="@string/clear"
            android:textColor="@color/color_black"
            android:textSize="@dimen/txt_14_dp" />

        <RelativeLayout
            android:id="@+id/relLay"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/txtViewTitleClear"
            android:layout_marginTop="10dp">


            <LinearLayout
                android:id="@+id/linLayType"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtViewVacation"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_green_rect"
                    android:gravity="center"
                    android:text="@string/vacation"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/txt_14_dp" />

                <TextView
                    android:id="@+id/txtViewSickLeave"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/color_white"
                    android:gravity="center"
                    android:text="@string/sick_leave"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/txt_14_dp" />

                <TextView
                    android:id="@+id/txtViewReliefSales"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/color_white"
                    android:gravity="center"
                    android:text="@string/relief_sales"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/txt_14_dp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linLayComment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/linLayType"
                android:layout_marginTop="1dp"
                android:background="@color/color_white">


                <EditText
                    android:id="@+id/edtTextComment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edt_blank"
                    android:gravity="start"
                    android:hint="Write a comment"
                    android:imeOptions="actionDone"
                    android:inputType="text|textMultiLine"
                    android:padding="5dp"
                    android:textColor="@color/color_black"
                    android:textSize="12dp" />

            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>


    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/color_white"
        android:textSize="16dp" />
</RelativeLayout>
