<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.yogeshgarg.source.mvp.login.LoginActivity"
    tools:showIn="@layout/activity_login">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@color/bg_grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/margin_50sp"
            android:layout_marginRight="@dimen/margin_50sp">


            <EditText
                android:id="@+id/edtTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_uppwe_round_grey_stroke"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="15dp"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_dark_grey"
                android:textSize="@dimen/txt_14_dp" />

            <EditText
                android:id="@+id/edtTextpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtTextUsername"
                android:background="@drawable/edt_lower_round_grey_stroke"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="15dp"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_dark_grey"
                android:textSize="@dimen/txt_14_dp" />


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtTextpassword"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn"
                android:padding="3dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/color_white"
                android:textSize="@dimen/txt_14_dp" />


            <TextView
                android:id="@+id/txtViewForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/forgot_password"
                android:padding="5dp"
                android:textColor="@color/color_black"
                android:textSize="@dimen/txt_12_dp" />

        </RelativeLayout>


    </RelativeLayout>


</ScrollView>
